--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="plug-ins/slick-1.8.0/slick/slick.min.js"></script>
-<script src="js/slayder.js"></script>
+<script src="js/slider.js"></script>
 <script src="js/tab.js"></script>
 </body>
 </html>
