--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="header center">
             <div class="header__logo">
                 <a href="#" class="logo">
-                    <img class="logo__img" src="image/home/logo.png" alt="logo">
+                    <img class="logo__img" src="/image/home/logo.png" alt="logo">
                 </a>
             </div>
             <div class="header__menu">
@@ -61,10 +61,30 @@
                     <button type="button" class="carousel__arrow carousel__arrow_left"></button>
                     <button type="button" class="carousel__arrow carousel__arrow_right"></button>
                     <div class="slides">
-                        <img src="image/home/slide1.jpg" alt="slide1" class="slides__slide">
-                        <img src="image/home/slide2.jpg" alt="slide2" class="slides__slide">
-                        <img src="image/home/slide3.jpg" alt="slide3" class="slides__slide">
-                        <img src="image/home/slide4.jpg" alt="slide4" class="slides__slide">
+                        <img 
+                            src="/image/home/slide1.jpg" 
+                            alt="slide1" 
+                            class="slides__slide"
+                            data-text="managing changing priorities"
+                        >
+                        <img 
+                            src="/image/home/slide2.jpg" 
+                            alt="slide2" 
+                            class="slides__slide" 
+                            data-text="complete project clarity for the whole"
+                        >
+                        <img 
+                            src="/image/home/slide3.jpg" 
+                            alt="slide3" 
+                            class="slides__slide" 
+                            data-text="spend time on business"
+                        >
+                        <img 
+                            src="/image/home/slide4.jpg" 
+                            alt="slide4" 
+                            class="slides__slide" 
+                            data-text="develier tools that works"
+                        >
                     </div>
                </div>  
             </div>
@@ -72,12 +92,6 @@
                 <div class="preview">
                     <button type="button" class="preview__arrow preview__arrow_left"></button>
                     <div class="preview__slides">
-                        <div class="thumbs">
-                            <button type="button" class="thumbs__button">managing changing priorities</button>
-                            <button type="button" class="thumbs__button">complete project clarity for the whole</button>
-                            <button type="button" class="thumbs__button thumbs__button_active">spend time on business</button>
-                            <button type="button" class="thumbs__button">develier tools that works</button>
-                        </div>
                     </div>
                     <button type="button" class="preview__arrow preview__arrow_right"></button>
                 </div>
@@ -158,7 +172,7 @@
                             </div>
                             <div class="tabs__content">
                                 <div class="tab-text">
-                                    <p class="tab__text">
+                                    <p class="tab__text tab__text_show">
                                             Tab 1 The aggregate of our joy and suffering, thousands of confident religions, ideologies, and economic doctrines, every hunter and forager, every hero and coward, every creator and destroyer of civilization, every king and peasant, every young couple in love, every mother and father, hopeful child, inventor and explorer, every teacher of morals, every corrupt politician, every "superstar," every "supreme leader," 
                                     </p>
                                     <p class="tab__text">
