--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/feedback-box.css">
     <link rel="stylesheet" href="css/feedback-title.css">
     <link rel="stylesheet" href="css/feedback-addres.css">
-    <link rel="stylesheet" href="css/map.css">
+    <link rel="stylesheet" href="css/main-content.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 </head>
 <body class="page">
@@ -29,7 +29,7 @@
         <div class="header center">
             <div class="header__logo">
                 <a href="#" class="logo">
-                    <img class="logo__img" src="image/home/logo.png" alt="logo">
+                    <img class="logo__img" src="/image/home/logo.png" alt="logo">
                 </a>
             </div>
             <div class="header__menu">
@@ -63,9 +63,9 @@
         </div>
     </section>
     <section class="page__line">
-        <div class="map">
-            <div class="map__shadow"></div>
-            <div class="map__feedback center">
+        <div class="main-content">
+            <div class="main-content__shadow"></div>
+            <div class="main-content__feedback center">
                     <div class="feedback-box">
                         <div class="feedback-box__wraper">
                             <h5 class="feedback-title feedback-title_envelope">
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                 </div>
-            <div class="map__background" id="map__background"></div>
+            <div class="main-content__map" id="main-content__map"></div>
         </div>
     </section>
     <section class="page__footer page__footer_top-shadow">
